[gd_scene load_steps=5 format=3 uid="uid://bf4f8s67xhjb1"]

[ext_resource type="Script" path="res://ui/level_up_screen.gd" id="1_t0gr2"]
[ext_resource type="Script" path="res://ui/upgrade_list.gd" id="2_1biks"]
[ext_resource type="Texture2D" uid="uid://t66upf80k4ys" path="res://sprites/menu.png" id="2_ufwof"]
[ext_resource type="FontFile" uid="uid://djbdfcxygn7e2" path="res://fonts/destroya/Destroya.ttf" id="3_jbdng"]

[node name="LevelUpScreen" type="CanvasLayer"]
script = ExtResource("1_t0gr2")

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 110
theme_override_constants/margin_top = 110
theme_override_constants/margin_right = 93
theme_override_constants/margin_bottom = 95

[node name="Shadow" type="NinePatchRect" parent="MarginContainer2"]
modulate = Color(0, 0, 0, 0.415686)
layout_mode = 2
texture = ExtResource("2_ufwof")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="Panel" type="NinePatchRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("2_ufwof")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
layout_mode = 2
offset_right = 952.0
offset_bottom = 448.0
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_jbdng")
theme_override_font_sizes/font_size = 20
text = "Level Up!"

[node name="UpgradeList" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
script = ExtResource("2_1biks")

[node name="List" type="ItemList" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/UpgradeList"]
layout_mode = 2
allow_reselect = true
allow_search = false
auto_height = true
max_columns = 3
same_column_width = true
fixed_column_width = 268
icon_mode = 0

[node name="Description" type="RichTextLabel" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/UpgradeList"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
fit_content = true

[connection signal="upgrade_selected" from="MarginContainer/Panel/MarginContainer/VBoxContainer/UpgradeList" to="." method="_on_upgrade_list_upgrade_selected"]
[connection signal="gui_input" from="MarginContainer/Panel/MarginContainer/VBoxContainer/UpgradeList/List" to="MarginContainer/Panel/MarginContainer/VBoxContainer/UpgradeList" method="_on_list_gui_input"]
[connection signal="item_clicked" from="MarginContainer/Panel/MarginContainer/VBoxContainer/UpgradeList/List" to="MarginContainer/Panel/MarginContainer/VBoxContainer/UpgradeList" method="_on_list_item_clicked"]
[connection signal="item_selected" from="MarginContainer/Panel/MarginContainer/VBoxContainer/UpgradeList/List" to="MarginContainer/Panel/MarginContainer/VBoxContainer/UpgradeList" method="_on_list_item_selected"]
